@@ -34,7 +34,7 @@ label_cars = Modell
 label_colors = Farben
 label_extras = Extras
 button_calcprice = Preis berechnen
-msg_price = {0,choice,0#Stell dir dein Traumauto zusammen!|1< Dein Preis: \u20AC\u00A0{0,number,#0.00}}
+msg_price = {0,choice,0#Stell dir dein Traumauto zusammen!|1< Dein Preis: \u20AC\u00A0{0}}
 color_black = schwarz
 color_blue = blau
 color_marine = Marine blau
